Imported config file to main file

--- a/BMI-calculator/BMR/Config.ini
+++ b/BMI-calculator/BMR/Config.ini
@@ -1,4 +1,16 @@
-Gender ={'Male':{'Metric':88.362, 'American':88.362}, 'Female': {'Metric':447.593, 'American':447.593'}}
-Units = {'Male':{'Weight':13.397,'Height':4.799,'Age':5.677}, 'Female':{'Weight1':9.247, 'Height1':3.098,'Age1':4.330}}
+[Male]
+a = 88.362
+b = 13.397
+c = 4.799
+d = 5.677
 
-Conversion= {'pound':2.204,'inch':39.37}
+[Female]
+w = 447.593
+x = 9.247
+y = 3.098
+z = 4.33
+
+[Conversion]
+pound = 2.2
+inch = 33.397
+
